kubedefs/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lumia-app
  labels: 
    app: lumia-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lumia-app
  template:
    metadata:
      labels:
        app: lumia-app
    spec:
      containers:
      - name: lumia-app
        image: ndzenyuy/lumia-app:latest
        imagePullPolicy: Always
        ports:
        - name: lumia-app-port
          containerPort: 8080
