kubedefs/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lumiadb
  labels:
    app: lumiadb
spec:
  selector:
    matchLabels:
      app: lumiadb
  replicas: 1
  template:
    metadata:
      labels:
        app: lumiadb
    spec:
      containers:
      - name: lumiadb
        image: ndzenyuy/lumia-db:latest
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: lumia-db-data
        ports:
        - name: lumiadb-port
          containerPort: 3306
      volumes:
        - name: lumia-db-data
          persistentVolumeClaim:
            claimName: db-pv-claim
