kubedefs/appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: lumia-app-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: lumia-app
  type: ClusterIP
